@@ -5,83 +5,39 @@ import org.apache.jena.arq.querybuilder.WhereBuilder;
 import org.apache.jena.graph.Node;
 import org.apache.jena.sparql.core.Var;
 import org.json.JSONArray;
-
-import uk.ac.cam.cares.downsampling.Downsampling;
 import uk.ac.cam.cares.jps.agent.sensorloggermobileappagent.AgentConfig;
+import uk.ac.cam.cares.jps.agent.sensorloggermobileappagent.model.Payload;
+import uk.ac.cam.cares.jps.agent.sensorloggermobileappagent.model.SensorData;
 import uk.ac.cam.cares.jps.base.query.RemoteStoreClient;
-import uk.ac.cam.cares.jps.base.timeseries.TimeSeries;
 
-import java.time.OffsetDateTime;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
 
 import static uk.ac.cam.cares.jps.agent.sensorloggermobileappagent.OntoConstants.*;
 
-public class RelativeBrightnessProcessor extends SensorDataProcessor {
-    private String relativeBrightnessIRI = null;
+public class RelativeBrightnessProcessor extends SensorDataDownsampledProcessor {
 
-    private final List<Double> brightnessList = new ArrayList<>();
+    private SensorData<Double> brightness;
 
-    public RelativeBrightnessProcessor(AgentConfig config, RemoteStoreClient storeClient, Node smartphoneIRINode) {
-        super(config, storeClient, smartphoneIRINode);
-        initIRIs();
+    public RelativeBrightnessProcessor(AgentConfig config, RemoteStoreClient ontopClient, RemoteStoreClient blazegraphClient, Node smartphoneIRINode) {
+        super("RelativeBrightness", config, ontopClient, blazegraphClient, smartphoneIRINode,
+                config.getRbDSResolution(),
+                config.getRbDSType());
     }
 
     @Override
-    public void addData(HashMap<String, List<?>> data) {
-        timeList.addAll((List<OffsetDateTime>) data.get("brightness_tsList"));
-        brightnessList.addAll((List<Double>) data.get("brightnessList"));
+    public void addData(Payload data) {
+        timeList.addAll(data.getBrightnessTs());
+        brightness.addData(data.getBrightness());
     }
 
     @Override
-    public TimeSeries<Long> getProcessedTimeSeries() throws Exception {
-        List<String> dataIRIList = Collections.singletonList(relativeBrightnessIRI);
-        List<List<?>> valueList = Collections.singletonList(brightnessList);
-
-        TimeSeries<OffsetDateTime> ts = new TimeSeries<>(timeList, dataIRIList, valueList);
-        ts = Downsampling.downsampleTS(ts, config.getRbDSResolution(), config.getRbDSType());
-
-        List<Long> epochlist = ts.getTimes().stream().map(t -> t.toInstant().toEpochMilli())
-                .collect(Collectors.toList());
-
-        List<List<?>> downsampledValuesList = Arrays.asList(ts.getValuesAsDouble(relativeBrightnessIRI));
-
-        clearData();
-        return new TimeSeries<>(epochlist, dataIRIList, downsampledValuesList);
+    void initSensorData() {
+        brightness = new SensorData<>(Double.class);
+        sensorData = List.of(brightness);
     }
 
     @Override
-    public void initIRIs() {
-        if (relativeBrightnessIRI != null) {
-            return;
-        }
-
-        getIrisFromKg();
-
-        if (relativeBrightnessIRI == null) {
-            isIriInstantiationNeeded = true;
-            isRbdInstantiationNeeded = true;
-        }
-    }
-
-    @Override
-    public List<Class<?>> getDataClass() {
-        return Collections.nCopies(getDataIRIs().size(), Double.class);
-    }
-
-    @Override
-    public List<String> getDataIRIs() {
-        return List.of(relativeBrightnessIRI);
-    }
-
-    @Override
-    void clearData() {
-        timeList.clear();
-        brightnessList.clear();
-    }
-
-    @Override
-    void getIrisFromKg() {
+    void getDataIrisFromKg() {
         Var varO = Var.alloc("o");
 
         WhereBuilder wb = new WhereBuilder()
@@ -99,7 +55,7 @@ public class RelativeBrightnessProcessor extends SensorDataProcessor {
 
         JSONArray queryResult;
         try {
-            queryResult = storeClient.executeQuery(sb.buildString());
+            queryResult = ontopClient.executeQuery(sb.buildString());
         } catch (Exception e) {
             // ontop does not accept queries before any mapping is added
             return;
@@ -107,7 +63,7 @@ public class RelativeBrightnessProcessor extends SensorDataProcessor {
         if (queryResult.isEmpty()) {
             return;
         }
-        relativeBrightnessIRI = queryResult.getJSONObject(0).optString("o");
+        brightness.setDataIri(queryResult.getJSONObject(0).optString("o"));
     }
 
     @Override
